Added open source

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,6 +20,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <link href="style.css" rel="stylesheet" type="text/css" />
 
     <title>Weather App Week 2</title>
   </head>
@@ -125,6 +125,16 @@
           </div>
         </div>
       </div>
+    </div>
+    <div>
+      <small>
+        <a
+          href="https://github.com/Adankanych/New-Vanilla-Weather"
+          target="_blank"
+          >Open-source code</a
+        >
+        by Alla Dankanych
+      </small>
     </div>
     <script src="index.js"></script>
   </body>
