--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <script
       src="https://kit.fontawesome.com/be4a75d664.js"
       crossorigin="anonymous"
     ></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css" />
 
     <title>Weather App Week 2</title>
