--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
           <div class="col-6">
             <div class="current">
               <h2 id="city"></h2>
-              <h3>Sunday</h3>
               <div class="row">
                 <div class="col">
                   <ul class="description">
+                    <li>last updated: <span id="date"></span></li>
                     <li id="description"></li>
                     <li>
                       <i class="fas fa-sun weather-icon"></i>
