added icon element

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <li>last updated: <span id="date"></span></li>
                     <li id="description"></li>
                     <li>
-                      <i class="fas fa-sun weather-icon"></i>
+                      <img src="" id="icon" class="float-left" />
                     </li>
                   </ul>
                 </div>
