--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                   type="text"
                   class="form-control"
                   id="exampleWeather"
-                  placeholder="Enter city and state"
+                  placeholder="Enter city"
+                  autocomplete="off"
                 />
               </div>
             </div>
@@ -72,8 +73,8 @@
                       80</span
                     >
                     <span class="units">
-                      <a href="#" class="celsius" id="celsius-link">°C /</a>
-                      <a href="#" class="fahrenheit" id="fahrenheit-link">°F</a>
+                      <a href="#" class="active" id="celsius-link">°C /</a>
+                      <a href="#" class="active" id="fahrenheit-link">°F</a>
                     </span>
                   </span>
                 </div>
