--- a/index.html
+++ b/index.html
@@ -45,11 +45,6 @@
             <div class="col-2">
               <input type="submit" value="Search" class="search" />
             </div>
-            <div class="col-2">
-              <button class="currentLocation" id="current-location">
-                Current
-              </button>
-            </div>
           </div>
         </form>
 
@@ -95,40 +90,18 @@
             </div>
           </div>
         </div>
-        <div class="row align-items-center">
-          <div class="col">
-            <div class="first-day">
-              <h4>Tomorrow</h4>
-              <i class="fas fa-cloud-sun emoji"></i>
-              <p>78°F</p>
-            </div>
-          </div>
-          <div class="col">
-            <div class="second-day">
-              <h4>Day 2</h4>
-              <i class="fas fa-cloud-sun-rain emoji"></i>
-              <p>72°F</p>
-            </div>
-          </div>
-          <div class="col">
-            <div class="third-day">
-              <h4>Day 3</h4>
-              <i class="fas fa-cloud-showers-heavy emoji"></i>
-              <p>65°F</p>
-            </div>
-          </div>
-          <div class="col">
-            <div class="fourth-day">
-              <h4>Day 4</h4>
-              <i class="fas fa-cloud-sun-rain emoji"></i>
-              <p>72°F</p>
-            </div>
-          </div>
-          <div class="col">
-            <div class="fifth-day">
-              <h4>Day 5</h4>
-              <i class="fas fa-cloud emoji"></i>
-              <p>71°F</p>
+        <div class="weather-forecast">
+          <div class="row align-items-center">
+            <div class="col-2">
+              <div class="weather-forcaste-date">Thu</div>
+              <img
+                src="http://openweathermap.org/img/wn/50d@2x.png"
+                width="36"
+              />
+              <div class="weather-forecast-temperature">
+                <span class="weather-forecast-temperature-max">18°</span>
+                <span class="weather-forecast-temperature-min">12°</span>
+              </div>
             </div>
           </div>
         </div>
